<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_marginLeft="16dp"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnOption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/adults"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        app:cardCornerRadius="10dp"
        android:textColor="@color/button_text_color" />

    <Button
        android:id="@+id/btnOption2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/children"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        app:cardCornerRadius="10dp"
        android:textColor="@color/button_text_color" />

    <Button
        android:id="@+id/btnOption3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/eldery"
        android:textSize="12sp"
        android:fontFamily="@font/poppins"
        app:cardCornerRadius="10dp"
        android:textColor="@color/button_text_color" />

</LinearLayout>