<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/round_relativelayout"
    android:elevation="5dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/deseaseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/brain"
        android:textColor="@color/third_color"
        android:textSize="18sp"
         />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@+id/get_started_button"
        android:layout_alignTop="@+id/deseaseTitle"
        app:srcCompat="@drawable/brain_illustration" />

    <TextView
        android:id="@+id/nr_of_articles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/_34_articles"
        android:textColor="@color/third_color"
        android:textSize="15sp"
        android:layout_alignStart="@id/deseaseTitle"
        android:layout_below="@id/deseaseTitle" />

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/get_started"
        android:textSize="12sp"
        app:cornerRadius="5dp"
        android:layout_alignStart="@id/nr_of_articles"
        android:layout_below="@id/nr_of_articles" />

</RelativeLayout>