<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="279dp"
        android:layout_height="151dp"
        app:cardBackgroundColor="@color/secondary_color"
        app:cardCornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingLeft="40dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/deseaseTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/brain"
                android:textColor="@color/third_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nr_of_articles"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/_34_articles"
                android:textColor="@color/third_color"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@id/deseaseTitle"
                app:layout_constraintTop_toBottomOf="@id/deseaseTitle" />

            <Button
                android:id="@+id/get_started_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/get_started"
                android:textSize="12sp"
                app:cornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/nr_of_articles"
                app:layout_constraintTop_toBottomOf="@id/nr_of_articles" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/get_started_button"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/brain_illustration" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>